syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.driver";

message SpringMessage {
    bytes payload = 1;
    map<string, string> headers = 2;
}
