syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.driver";

message GenericMessage {
    map<string, GenericValue> map = 1;
}

message GenericValue {
    oneof value {
        string str = 2;
        GenericMessage obj = 3;
    }
}
